--- a/api/pages/models/pages.settings.json
+++ b/api/pages/models/pages.settings.json
@@ -26,7 +26,10 @@
         "components.about",
         "components.partners",
         "components.content",
-        "components.contact"
+        "components.contact",
+        "components.aboutparallax",
+        "components.parallax",
+        "components.bloggrids"
       ]
     }
   }
