--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "nodemailer": "^6.5.0",
     "slugify": "^1.4.5",
     "strapi": "3.1.1",
     "strapi-admin": "3.1.1",
