--- a/api/settings/models/settings.settings.json
+++ b/api/settings/models/settings.settings.json
@@ -18,6 +18,11 @@
       "type": "component",
       "repeatable": true,
       "component": "helpers.social"
+    },
+    "Promotion": {
+      "type": "component",
+      "repeatable": false,
+      "component": "helpers.promotion"
     }
   }
 }
