--- a/api/pages/models/pages.settings.json
+++ b/api/pages/models/pages.settings.json
@@ -30,7 +30,9 @@
         "components.aboutparallax",
         "components.parallax",
         "components.bloggrids",
-        "components.tablist"
+        "components.tablist",
+        "components.register",
+        "components.reg"
       ]
     }
   }
