--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "documentation": "strapi install documentation",
     "build": "strapi build",
     "strapi": "strapi",
-    "heroku-postbuild": "npm install && npm run build"
+    "heroku-postbuild": "npm install && npm run build -- clean"
   },
   "devDependencies": {},
   "dependencies": {
